--- a/Tour-Booking FE/package.json
+++ b/Tour-Booking FE/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.2",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
