--- a/Tour-Booking FE/package.json
+++ b/Tour-Booking FE/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^4.0.11",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.5.0",
